implementing RabbitMQ and JWT

--- a/User Service/User-Service/pom.xml
+++ b/User Service/User-Service/pom.xml
@@ -94,6 +94,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!--RabbitMQ Dependency-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 
