--- a/Order Service/Order-Service/pom.xml
+++ b/Order Service/Order-Service/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
+		<!--RabbitMQ Dependency-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 
