--- a/User Service/User-Service/src/main/resources/application.properties
+++ b/User Service/User-Service/src/main/resources/application.properties
@@ -29,3 +29,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.security.user.name = admin
 spring.security.user.password=admin
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
+rabbitmq.exchange=order.exchange
+rabbitmq.routingkey=order.routingkey
+rabbitmq.queue=order.queue
