--- a/User Service/User-Service/src/main/resources/application.properties
+++ b/User Service/User-Service/src/main/resources/application.properties
@@ -40,3 +40,7 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange=order.exchange
 rabbitmq.routingkey=order.routingkey
 rabbitmq.queue=order.queue
+
+
+spring.redis.host=localhost
+spring.redis.port=6379
