--- a/User Service/User-Service/pom.xml
+++ b/User Service/User-Service/pom.xml
@@ -100,6 +100,13 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
+		<!--Redis Dependency-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+
 
 
 	</dependencies>
