--- a/User Service/User-Service/src/main/resources/application.properties
+++ b/User Service/User-Service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ eureka.instance.lease-renewal-interval-in-seconds=30
 
 spring.datasource.url=jdbc:mysql://localhost:3306/userservice
 spring.datasource.username=root
-spring.datasource.password=05xJunaid
+spring.datasource.password=Ju@al#321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Optional if using JPA
